# caption-project

./: CHANGELOG.md  Cargo.toml  pyproject.toml  rust-toolchain.toml
.github/workflows/: CI.yaml  CI.yml  polars_ci.yaml  version.yaml
python/caption_project/: _lowlevel.pyi  caption.py  image.py
python/tests/: test_caption.py  test_hello.py
scripts/: install_openssl.sh
src/: lib.rs
test_images/: IMG_4275.HEIC  IMG_5778.HEIC  IMG_5790.HEIC  IMG_5865.HEIC  IMG_5912.HEIC  IMG_7357.HEIC  IMG_7366.HEIC
